fixed alignment of nav icons

--- a/Gp/assets/css/style.css
+++ b/Gp/assets/css/style.css
@@ -125,10 +125,10 @@ h6 {
   padding: 15px 0;
 }
 
-#header.header-scrolled,
+/* #header.header-scrolled,
 #header.header-inner-pages {
   background: rgba(0, 0, 0, 0.8);
-}
+} */
 
 #header .logo {
   font-size: 32px;
@@ -185,28 +185,25 @@ h6 {
 * Desktop Navigation 
 */
 
-
-
 .navbar {
   padding: 20px;
 }
 
 .navbar ul {
   margin: 0;
-  padding: 0;
+  padding: 10;
   display: flex;
   list-style: none;
   align-items: center;
+  flex-direction: column;
 }
-
-
 
 .navbar a,
 .navbar a:focus {
   display: flex;
   align-items: top;
   justify-content: space-between;
-  padding: 0px 80px 20px 10px;
+  padding: 100px 80px 20px 10px;
   font-size: 15px;
   font-weight: 600;
   color: #fff;
